app/ui/main/musicPlayer.module.css
.container {
  background: var(--light);
  height: 130px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
}

.flex {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.glass_effect {
  /* From https://css.glass */
  background: rgba(239, 238, 224, 0.05);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
}

.song_card {
  display: flex;
  flex-direction: row;
  margin-left: 10px;
  width: 300px;
  height: auto;
}

.song_card_info {
  display: block;
  margin-left: 15px;
  margin-top: auto;
  margin-bottom: auto;
}

.song_card_title {
  font-size: 0.9em;
  font-weight: 500;
  margin: 0;
}

.song_card_subtitle {
  font-size: .7em;
  font-weight: 300;
  color: var(--secondary);
  padding-top: 5px;
  margin: 0;
}

.song_card_img {
  border-radius: 20px;
}

.icon {
  width: 39px;
  height: 39px;
  margin-inline: 10px;
}

.play_icon {
  fill: var(--secondary);
}

.song_length {
  display: none;
}

.volume_container {
  display: none;
  margin-right: 15px;
}

.seek_slider {
  display: none;
}

.player_controls {
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: nowrap;
  width: 300px;
}


@media (min-width: 650px) {
  /* .song_card_info {
    display: block;
    margin-left: 15px;
    margin-top: auto;
    margin-bottom: auto;
  } */

  .song_card_title {
    font-size: 1.1em;
  }

  .song_card_subtitle {
    font-size: .9em;
  }
}


@media (min-width: 900px) {
  .flex {
    gap: 10px;
  }

  .song_length {
    display: block;
  }

  .player_controls_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex: 2;
  }

  .player_controls {
    padding-bottom: 10px;
  }

  .volume_container {
    display: flex;
    flex-direction: row;
    width: 200px;
  }

  .volume_icon {
    width: 20px;
    height: 20px;
  }

  .seek_slider {
    display: block;
    width: 100%;
  }

}


@media (min-width: 1300px) {
  .container {
    padding-inline: 10%;
  }

  .seek_slider {
    width: 85%;
  }
}

